@@ -1,3 +1,8 @@
+2005-05-12 Alain Magloire
+	Fix PR 93970
+	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDragAdapter.java
+	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDropAdapter.java
+
 2005-05-09 Alain Magloire
 	Patch from David Daoust, PR 94120
 	* src/org/eclipse/cdt/internal/ui/wizards/CWizardRegistry.java
